Migrate StatusTool.getCloudStatus from V1 ClusterStatus to V2 /cluster/nodes + /collections APIs
Co-authored-by: epugh <22395+epugh@users.noreply.github.com>